feat: Show labels for triangle vertices

--- a/triangle/triangle_centers.html
+++ b/triangle/triangle_centers.html
@@ -520,9 +520,9 @@
               <li>
                 外心・垂心・重心は常に一直線（<b>オイラー線</b>といいます）上にあります。
               </li>
-              <li>直角三角形の外心は、常に斜辺の上になります。</li>
+              <li>直角三角形の外心は、常に斜辺の上にあります。</li>
               <li>
-                重心と内心は常に三角形の内部に、傍心は常に三角形の外部に存在します。
+                重心と内心は常に三角形の内部に、傍心は常に三角形の外部にあります。
               </li>
               <li>鈍角三角形では、垂心と外心は三角形外部にあります。</li>
             </ul>
